Project sneaks{
    database_type: "MySQL"
    name: "sneaks"
}

Table users {
    id int [pk, increment]
    username varchar(50) [unique]
    email varchar(100) [unique]
    password_hash varchar(255)
    first_name varchar(100)
    last_name varchar(100)
    phone_number varchar(20)

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}

Table products {
    id int [pk, increment]
    name varchar(255)
    description text
    price decimal(10, 2)
    stock integer

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
    comments text
}

Table categories {
    id int [pk, increment]
    name varchar(255)
    description text

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}

Table product_categories {
    product_id int [ref: > products.id]
    category_id int [ref: > categories.id]

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]

    indexes {
        (product_id, category_id) [pk]
    }
}

Table cart{
    id int [pk, increment]
    user_id int [ref: > users.id]
    is_temporary boolean [default: true]

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}

Table cart_products {
    id int [pk, increment]
    cart_id int [ref: > cart.id]
    product_id int [ref: > products.id]
    quantity int [default: 1]
    price decimal(10, 2)

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}

Table orders {
    id int [pk, increment]
    user_id int [ref: > users.id]
    cart_id int [ref: > cart.id]
    total_amount decimal(10, 2)
    price decimal(10, 2)
    status varchar(50)

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}

Table shippingadresses {
    id int [pk, increment]
    user_id int [ref: > users.id]
    order_id int [ref: > orders.id]
    address_line1 varchar(255)
    address_line2 varchar(255)
    city varchar(100)
    state varchar(100)
    postal_code varchar(20)
    country varchar(100)

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}

Table invoices {
    id int [pk, increment]
    order_id int [ref: > orders.id]
    invoice_number varchar(100)
    amount decimal(10, 2)
    issued_date timestamp [default: `CURRENT_TIMESTAMP`]
    due_date timestamp
    status varchar(50)

    created_at timestamp [default: `CURRENT_TIMESTAMP`]
    updated_at timestamp [default: `CURRENT_TIMESTAMP`]
    is_active boolean [default: true]
}
